fix scrollbar issue

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /* DEFAULT VERSION */
+.body {
+  overflow-x: hidden;
+}
 
 /* Navbar */
 .navbar {
